<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/songListFragment">

    <fragment
        android:id="@+id/songListFragment"
        android:name="com.example.songbook.ui.list.SongListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_songListFragment_to_addEditFragment"
            app:destination="@id/addEditFragment" />
        <action
            android:id="@+id/action_songListFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.example.songbook.ui.addedit.AddEditFragment"
        android:label="@string/add_song" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.songbook.ui.detail.DetailFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_detailFragment_to_addEditFragment"
            app:destination="@id/addEditFragment" />
        <action
            android:id="@+id/action_detailFragment_to_pdfViewerFragment"
            app:destination="@id/pdfViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/pdfViewerFragment"
        android:name="com.example.songbook.ui.pdfviewer.PdfViewerFragment"
        android:label="@string/open_notation" />
</navigation>
